# artifacts/api-server/src/routes/health.ts
@@ -1,10 +1,18 @@
 import { Router, type IRouter } from "express";
-import { HealthCheckResponse } from "@workspace/api-zod";
+import { HealthCheckResponse, LegacyHealthCheckResponse } from "@workspace/api-zod";
 
 const router: IRouter = Router();
 
 router.get("/healthz", (_req, res) => {
   const data = HealthCheckResponse.parse({ status: "ok" });
+  res.json(data);
+});
+
+router.get("/health", (_req, res) => {
+  const data = LegacyHealthCheckResponse.parse({
+    status: "OK",
+    timestamp: new Date(),
+  });
   res.json(data);
 });
 
